# miou

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  codebook.toml  docker-compose.yml  dockerfile  miou.docker.yml  release-plz.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: analysis.yml  docker.yml  documentation.yml  pr-release.yml  release-plz.yml  release.yml  tests.yml
src/: bot.rs  config.rs  main.rs  utils.rs
src/alerts/: alert.rs  alert_controller.rs  alert_loader.rs  mod.rs
src/commands/: command.rs  commander.rs  markdown_response.rs  mod.rs
src/commands/actions/: alerts.rs  games.rs  help.rs  mod.rs  register.rs  unregister.rs
src/matrix/: client.rs  encryption.rs  mod.rs  session.rs  sync.rs
src/tmars/: mod.rs  requester.rs  response_structs.rs  structs.rs  sync.rs
