[package]
authors = ["Florian Duros <florian.duros@ormaz.fr>"]
name = "miou"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/florianduros/miou"
homepage = "https://github.com/florianduros/miou"
license = "AGPL-3.0-only"
description = "A Matrix bot for Terraforming Mars game notifications"
exclude = [".github"]

[[bin]]
name = "miou"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
command-parser = "1.0.1"
env_logger = "0.11.8"
figment = { version = "0.10", features = ["yaml", "env"] }
futures = "0.3.31"
log = "0.4.29"
matrix-sdk = { version = "0.16.0", features = ["markdown", "bundled-sqlite"] }
mime = "0.3.17"
mockall = "0.14.0"
reqwest = { version = "0.13.1", features = ["json", "query"] }
serde = "1.0.228"
serde_json = "1.0.148"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
mockito = "1.7.1"
serial_test = "3.3"
tempfile = "3.24.0"
